2014-10-22 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c, gw/dlr.h: dropped SMPP specific intermediate dlr mask
      and replaced it with abstracted buffered.

2014-10-13  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_fake.c, test/fakesmsc.c: add UCS-2 (Unicode) support for MO
      messages withing FAKE SMSC type.
      
2014-10-13 Alexander Malysh <amalysh at kannel.org>
    * gw/meta_data.h: added SMPP group

2014-10-13 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smpp_pdu.[ch], gw/smsc/smsc_smpp.c: fixed error code
      SMPP_ESME_RALYNBD -> SMPP_ESME_RALYBND.

2014-10-13 Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.c: added more vorvose SSL error.
      Thanks to Artem Pylypchuk <articice at ua.fm> for this patch.

2014-09-25  Stipe Tolj  <stolj at kannel.org>
    * test/test_regex.c: fix substring dumping, upper limit caused PANIC. NLC.
    
2014-09-08 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_sqlite3.c: fixed DLR status update, see #705.
      Thanks to Filippo Natali <filippo.natali at gmail.com> for this patch.

2014-08-01  Stipe Tolj  <stolj at kannel.org>
    * Making stable release 1.4.4.